kubernetes/pg-backup-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-backup
  namespace: del
  labels:
    app: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        app: backup
    spec:
      containers:
        - name: backup
          image: kartoza/pg-backup:14-3.3
          volumeMounts:
            - mountPath: /backups
              name: pg-backup-data
      restartPolicy: Always
      volumes:
        - name: pg-backup-data
          persistentVolumeClaim:
            claimName: pg-backup-data
