kubernetes/del-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: del
  namespace: del
  labels:
    app: del
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: del
  type: ClusterIP
