kubernetes/mkdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-del
  namespace: del
  labels:
    app: mkdocs
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: mkdocs
  type: ClusterIP
